styles/desktop.css
html {
	font-size: 60%;
}

* {
	margin: 0;
	padding: 0;
  border-color: transparent;
}

body {
  width: 100vw;
  height: 100vh;
  background-color: #e8e8ff !important;
}

#main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.nav-bar {
  width: 100vw;
  height: 12vh;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-self: auto;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: #e8e8ff;
}

.website-title{
  text-align: center;
  font-size: 5vw;
  color: #2d3142;
  font-family: Tangerine, 'Source Sans Pro';
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: flex;
  justify-content: space-evenly;
}

.cat-dropdown {
  position: absolute;
  display: none;
}

li a {
  display: block;
  font-size: 2.25rem;
  color: #2d3142;
  text-align: center;
  padding: 14px 16px;
  text-decoration: underline;
  font-family: Spectral, 'Source Sans Pro';
}

li a:hover {
  color: #7F7FB5;
  text-decoration: none;
}

ul li:hover ul.cat-dropdown {
  display: block; 
  color: #7F7FB5;
  text-decoration: none;
  justify-content: center;
  background-color: #e8e8ff;
}

#introduction-body {
  width: 100vw;
  height: 75vh;
  display: flex;
  flex-direction: row;
  background-color: #F2F1F3;
  justify-content: space-evenly;
}

#introduction {
  display: flex;
  flex-direction: row;
  background-color: #F2F1F3;
  flex-direction: column;
  justify-content: space-evenly;
  padding-top: 3vh;
}

#siamese {
  display: flex;
  justify-content: space-around;
  align-self: center;
  max-width: 30vw;
  height: fit-content;
}

.logos {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  height: fit-content;
}

#cfa {
  display: flex;
  justify-content: space-evenly;
  align-self: center;
  width: 7vw;
  height: fit-content;
}

#ica {
  display: flex;
  justify-content: space-evenly;
  align-self: center;
  width: 10vw;
  height: fit-content;
}

#cff {
  display: flex;
  justify-content: space-evenly;
  align-self: center;
  width: 7vw;
  height: fit-content;
}

.welcome-msg {
  display: flex;
  text-align: center;
  font-size: 5vw;
  color: #2d3142;
  font-family: Tangerine, 'Source Sans Pro';
  white-space: nowrap;
  align-self: center;
  flex-shrink: 0;
}

.intro-text {
  display: flex;
  max-width: 70rem;
  text-align: center;
  align-self: center;
  font-size: 1.15vw;
  font-weight: 300;
  color: #000000;
  font-family: Spectral, 'Source Sans Pro';
  flex-shrink: 0;
  flex-direction: column;
}


#lower-bar {
  width: 100vw;
  height: 12vh;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-self: auto;
  background-color: #e8e8ff;
}

#social-media {
  display: flex;
  flex-direction: row;
  align-self: center;
  justify-content: space-evenly;
  height: fit-content;
  max-width: 20%;
  height: auto;
  width: auto\9; 
}

.contact-us {
  display: flex;
  text-align: center;
  font-size: 2vw;
  color: #2d3142;
  font-family: Spectral, 'Source Sans Pro';
  justify-content: space-around;
  padding: 3rem;
  font-weight: 300;
}

.phone-number {
  display: flex;
  text-align: center;
  font-size: 1.5vw;
  color: #2d3142;
  font-family: Spectral, 'Source Sans Pro';
  padding: 3.5rem;
  justify-content: space-around;
}

@media screen and (max-width: 650px) {
  body {
    width: 100vw;
    height: 100vh;
    background-color: #e8e8ff !important;
  }
  
  #main {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-self: center;
  }

  .nav-bar {
    width: 100vw;
    height: 8vh;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-self: auto;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #e8e8ff;
  }

  #introduction-body {
    width: 100vw;
    height: 75vh;
    display: flex;
    align-self: center;
    flex-direction: column;
    background-color: #F2F1F3;
    justify-content: space-evenly;
  }

  li a {
    display: block;
    font-size: 1rem;
    color: #2d3142;
    text-align: center;
    padding: 14px 16px;
    text-decoration: underline;
    font-family: Spectral, 'Source Sans Pro';
  }

  #siamese {
    display: flex;
    justify-content: space-around;
    align-self: center;
    max-width: 60%;
    height: auto;
    width: auto\9; 
    padding: 0rem;
  }

  .welcome-msg {
    display: flex;
    text-align: center;
    font-size: 7vw;
    color: #2d3142;
    font-family: Tangerine, 'Source Sans Pro';
    white-space: nowrap;
    align-self: center;
    flex-shrink: 0;
  }
  
  .intro-text {
    display: flex;
    max-width: 70rem;
    text-align: center;
    align-self: center;
    font-size: 1.15vw;
    font-weight: 300;
    color: #000000;
    font-family: Spectral, 'Source Sans Pro';
    flex-shrink: 0;
    flex-direction: column;
  }
  
  .logos {
    display: flex;
    flex-direction: row;
    align-self: center;
    justify-content: space-evenly;
    height: fit-content;
  }

  #social-media {
    display: flex;
    flex-direction: row;
    align-self: center;
    justify-content: space-evenly;
    height: fit-content;
    max-width: 10%;
    height: auto;
    width: auto\9; 
  }
  
  #cfa {
    display: flex;
    justify-content: space-evenly;
    align-self: center;
    height: 3vh;
  }
  
  #ica {
    display: flex;
    justify-content: space-evenly;
    align-self: center;
    height: 5vh;
  }
  
  #cff {
    display: flex;
    justify-content: space-evenly;
    align-self: center;
    height: 3vh;
  }
}

